<resources>
    <string name="app_name">Point of Sales</string>
    <string name="title_activity_login">Sign in</string>
    <string name="customer_information">Customer Information</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_item_not_available">Please check code. Item with this SKU code is not available.</string>
    <string name="error_valid_amount">Enter valid amount</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="permission_phone_status">"Phone status permissions are needed."</string>
    <string name="title_activity_main">Checkout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="search_title">Search</string>
    <string name="title_activity_device_verification">Device Verification</string>
    <string name="action_device_verification">Verify and import data</string>
    <string name="propmt_verification_code">Enter Verification Code</string>
    <string name="scan">Scan</string>

    <!--dialog-->
    <string name="dialog_Add_items">This Item is not available.Do you want to add this Item?</string>
    <string name="dialog_Remove_items_od">Do you want to remove this Item?</string>
    <string name="add_item">Add Item</string>
    <string name="add_item_manully">Enter Sku Code</string>
    <string name="add_Coupons_manully">Enter Coupons Sku Code</string>
    <string name="add_coupon">Add Coupons</string>
    <string name="add">Add</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="item_price">Price</string>
    <string name="item_name">Name</string>
    <string name="item_brand">Brand</string>
    <string name="admin_code">Admin Code</string>
    <string name="payment_options">Check out</string>
    <string name="PayPrint">Pay</string>
    <string name="Rs">\u20B9 %s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_payment_options">Payment Options</string>
    <string name="title_activity_customer">Add Customer</string>
    <string name="title_activity_listof_orders">List of Orders</string>
    <string name="title_activity_orders_adapter">OrdersAdapter</string>
    <!--Order Adapter -->
    <string name="orderStatus">Complete</string>

    <!-- Strings related to Customer -->

    <string name="add_customer">Add Customer</string>
    <string name="customer_name"> Name</string>
    <string name="customer_email">Email</string>
    <string name="customer_street">Street</string>
    <string name="customer_place">Place</string>
    <string name="customer_phone">Phone</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_orders_details">Orders Details</string>
    <string name="title_activity_payment_confirmation">Payment Confirmation</string>
    <string name="title_activity_bluetooth_main">Print Receipt</string>
    <string name="title_activity_bluetooth_devicelist">Bluetooth Device List</string>
    <string name="send_receipt">Send Receipt</string>
    <string name="invalid_receipt">Invalid Receipt</string>
    <string name="ScanReceipt">Scan Receipt</string>
    <string name="title_activity_return_exchange">Return Exchange</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
