<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
        android:title="Search"
        android:icon="@drawable/ic_search_black"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:layout_width="wrap_content" />
    <item
        android:id="@+id/add_item"
        android:title="@string/add_item"
        android:icon="@drawable/add_item"
        android:showAsAction="always"
        />
    <item
        android:id="@+id/add_coupon"
        android:title="@string/add_coupon"
        android:icon="@drawable/add_item"
        android:showAsAction="always"
        />
    <item
        android:id="@+id/scan_button"
        android:orderInCategory="100"
        android:title="@string/scan"
        android:icon="@drawable/bardcode_scanner"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
