<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent1"
        android:contentDescription="@string/app_name"
        android:text="@string/add_Coupons_manully"
        android:textSize="25dp"
        android:textAlignment="center"
        android:paddingTop="15dp"
        android:layout_marginBottom="50dp"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/CouponsSkuCode"
       android:hint="Coupons Code"
        />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/addItemCart"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textStyle="bold" />

</LinearLayout>
