<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:scaleType="center"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorAccent1"
            android:contentDescription="@string/app_name"
            android:text="Receipt"
            android:textSize="25dp"
            android:textAlignment="center"
            android:paddingTop="15dp"
            android:layout_marginBottom="50dp"/>

        <Button
            android:textColor="@color/colorAccent1"
            android:layout_gravity="center"
            android:id="@+id/ScanReceipt"
            style="?android:textAppearanceSmall"
            android:background="@color/colorPrimary"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:text="@string/ScanReceipt"
            android:textStyle="bold"
            />

        <TextView
            android:layout_gravity="center"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:textColor="@color/item_name"
            android:contentDescription="@string/app_name"
            android:text="OR"
            android:textSize="25dp"
            android:textAlignment="center"
            android:paddingTop="15dp"
            android:layout_weight="0.19" />

        <EditText
            android:layout_gravity="center"
            android:layout_width="246dp"
            android:layout_height="52dp"
            android:id="@+id/receiptid"
            android:maxLength="25"
            android:hint="Enter Receipt Orderid"
            />

        <Button
            android:textColor="@color/colorAccent1"
            android:layout_gravity="center"
            android:id="@+id/enterreceiptno"
            style="?android:textAppearanceSmall"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_marginBottom="36dp"/>
    </LinearLayout>
</ScrollView>